--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>tj-trade</module>
         <module>tj-exam</module>
         <module>tj-data</module>
+        <module>tj-promotion</module>
     </modules>
     <packaging>pom</packaging>
 
