--- a/tj-promotion/pom.xml
+++ b/tj-promotion/pom.xml
@@ -77,6 +77,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
+        <!--aspecj -->
+        <!--  AopContext.currentProxy()：获取当前方法所在的代理对象-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
